[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lobsterparser"
authors = [{name = "Roberto Rousse"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pandas>=1.0.0", # Specify the version of pandas you depend on
]

[project.urls]
Home = "https://github.com/rbrtrss/lobsterparser"